--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -2,11 +2,40 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+
+a {
+color:#ff0;
+text-decoration:underline;
+}
+
 .main-visual {
 	width: 100%;
-	height: 650px;
+	height: 500px;
 	background-image: image-url("top.jpg");
 	background-size: cover;
 	background-position: bottom;
+}
 
+.main-text {
+  color: white;
+  font-size: 30px;
+  margin-top: 50px;
+}
+
+.top-buttons {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.top-button {
+  background-color: white;
+  border: 3px solid #38C5D1;
+  border-radius: 7px;
+  width: 220px;
+  height: 50px;
+  line-height: 45px;
+  margin: 30px 0;
+  text-decoration: none;
+  color: white;
 }
