--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,20 @@
           <div class="header-container">
             <ul class="nav-list">
               <% if user_signed_in? %>
+                <li class="nav-list-item"><%= link_to "トップページ", root_path %></li>
                 <li class="nav-list-item"><%= link_to "マイページ", user_notes_path(year: Time.now.year, month: Time.now.month) %></li>
                 <li class="nav-list-item"><%= link_to "アイテム一覧", user_items_path %></li>
                 <li class="nav-list-item"><%= link_to "つぶやき一覧", user_tweets_path %></li>
                 <li class="nav-list-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+
+              <% elsif admin_signed_in? %>
+                <li class="nav-list-item"><%= link_to "商品一覧", admin_items_path, class: "link" %></li>
+                <li class="nav-list-item"><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class: "link" %></li>
+
               <% else %>
-                <li class="nav-list-item"><%= link_to "About", user_homes_about_path %></li>
+                <li class="nav-list-item"><%= link_to "トップページ", root_path %></li>
                 <li class="nav-list-item"><%= link_to "ログイン", new_user_session_path %></li>
+                <li class="nav-list-item"><%= link_to 'ゲストログイン（閲覧用）', user_homes_guest_sign_in_path, method: :post %></li>
               <% end %>
             </ul>
           </div>
@@ -36,5 +43,8 @@
     <%= yield %>
   </body>
   <footer class="footer">
+
+        <%= link_to "管理者ログイン", new_admin_session_path %>
+
   </footer>
 </html>
