--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -20,22 +20,50 @@ text-decoration:underline;
 .main-text {
   color: white;
   font-size: 30px;
-  margin-top: 50px;
+  margin-top: 70px;
+  margin-bottom: 30px;
 }
 
-.top-buttons {
-  margin-top: 20px;
-  text-align: center;
-}
-
-.top-button {
-  background-color: white;
-  border: 3px solid #38C5D1;
-  border-radius: 7px;
-  width: 220px;
+///////////////////////////////////////////////////////////////////////////////////////////////////////
+.top-button .btn-info {
+  background-color: white; //ボタンの背景色
+  color: #1DA7BE; //ボタンのテキストの色
+  border: 2px solid  #1DA7BE;
+  margin: 20px 0;
+  width: 300px;
   height: 50px;
-  line-height: 45px;
-  margin: 30px 0;
-  text-decoration: none;
-  color: white;
+  line-height: 35px;
 }
+
+.btn-info:hover, .btn-info:focus,
+.btn-info:active, .btn-info:active:focus, .btn-info:active:hover, .btn-info:active.focus,
+.btn-info.active, .btn-info.active:focus, .btn-info.active:hover, .btn-info.active.focus,
+.open > .dropdown-toggle.btn-info,
+.open > .dropdown-toggle.btn-info:hover,
+.open > .dropdown-toggle.btn-info:focus,
+.open > .dropdown-toggle.btn-info.focus,
+.btn-info.disabled:hover, .btn-info[disabled]:hover, fieldset[disabled] .btn-info:hover,
+.btn-info.disabled:focus, .btn-info[disabled]:focus, fieldset[disabled] .btn-info:focus,
+.btn-info.disabled.focus, .btn-info[disabled].focus, fieldset[disabled] .btn-info.focus {
+    background: whiteE; //ボタンの上にポインタを持ってきたり、クリックしたりした時の背景色
+    color: #1DA7BE; //ボタンの上にポインタを持ってきたり、クリックしたりした時のテキストの色
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+//.top-buttons {
+//  margin-top: 20px;
+//  text-align: center;
+//}
+
+//.top-button {
+//  background-color: white;
+//  border: 3px solid #38C5D1;
+//  border-radius: 7px;
+//  width: 220px;
+//  height: 50px;
+//  line-height: 45px;
+//  margin: 30px 0;
+//  text-decoration: none;
+//  color: white;
+//}
