--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -1,6 +1,16 @@
 <div class="container">
 	<div class="row">
 		<%= render "layouts/main_button" %>
+						<% if @tweet.errors.any? %>
+    			<div id="error_explanation">
+      			<h2><%= @tweet.errors.count %>件のエラーが発生しました。</h2>
+      			<ul>
+	      			<% @tweet.errors.full_messages.each do |message| %>
+	        			<li><%= message %></li>
+	      			<% end %>
+      			</ul>
+    			</div>
+  			<% end %>
 	</div>
 
 	<div class="row">
@@ -20,6 +30,9 @@
 				</div>
 				<h4>つぶやき投稿</h4>
 				<%= form_with :model => @tweet, url:user_tweets_path, method: :post, local: true, class:"form-horizontal" do |f| %>
+
+
+
 					<div>
 						<p>つぶやき内容</p>
 						<%= f.text_area :tweet_text, class: "col-xs-12" %>
