--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,14 +1,9 @@
-
-
-
-
-
-<%# if model.errors.any? %>
-  <!--<div id="error_explanation" class="alert alert-danger">
+<% if model.errors.any? %>
+<div id="error_explanation" class="alert alert-danger">
     <ul>
-      <%# model.errors.full_messages.each do |message| %>
-        <li><%#= message %></li>
-      <%# end %>
+      <% model.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
     </ul>
-  </div>-->
-<%# end %>
+  </div>
+<% end %>
