--- a/app/views/user/my_items/index.html.erb
+++ b/app/views/user/my_items/index.html.erb
@@ -1,18 +1,6 @@
 <div class="container">
 	<%= render "layouts/main_button" %>
-
-<%# if @my_item.errors.any? %>
-<!--     <div id="error_explanation">
-      <h2><%= @my_item.errors.count %>件のエラーが発生しました。</h2>
-      <ul>
-      <%# @my_item.errors.full_messages.each do |message| %>
-        <li><%#= message %></li>
-      <%# end %>
-      </ul>
-    </div> -->
-<%# end %>
-
-	<%#= render "layouts/error_messages", model: @my_item %>
+	<%= render "layouts/error_messages", model: @my_item %>
 
 
 	<div class="row">
