--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -41,11 +41,13 @@
 			<table class="table" style="table-layout:fixed;width:100%;">
     <colgroup>
         <col style="width:50%;">
-        <col style="width:20%;">
-        <col style="width:30%;">
+        <col style="width:15%;">
+        <col style="width:25%;">
+        <col style="width:10%;">
     </colgroup>
 	    <thead>
 				<tr>
+					<th></th>
 					<th></th>
 					<th></th>
 					<th></th>
@@ -80,6 +82,11 @@
 										</script>
 										<%= review.score %>
 								</div>
+							</td>
+							<td>
+								<% if review.user.id == current_user.id %>
+									<%= link_to "削除", user_item_review_path(@item, review), method: :delete, item_id: review.item.id, class: "btn btn-danger btn-sm" %>
+								<% end %>
 							</td>
 						</tr>
 					<% end %>
