--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
               <% elsif admin_signed_in? %>
                 <li class="nav-list-item"><%= link_to "商品一覧", admin_items_path, class: "link" %></li>
-                <li class="nav-list-item"><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class: "link" %></li>
+                <li class="nav-list-item"><%= link_to '管理者ログアウト', destroy_admin_session_path, method: :delete, class: "link" %></li>
 
               <% else %>
                 <li class="nav-list-item"><%= link_to "トップページ", root_path %></li>
