--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" data-turbolinks="false">
 	<div class="row">
 		<%= render "layouts/main_button" %>
 		<%= render "layouts/error_messages", model: @review %>
@@ -92,6 +92,7 @@
 					<% end %>
 				</tbody>
 			</table>
+			<%= paginate @reviews %>
 		</div>
 	</div>
 </div>
