--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -133,6 +133,7 @@
 					<% end %>
 				</tbody>
 			</table>
+			<%= paginate @tweets %>
 			<!-- <h4>あなたのつぶやき一覧</h4>
 				<table class="table table-hover" style="table-layout:fixed;width:100%;">
 				    <colgroup>
