--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -63,7 +63,7 @@
 								<div id="star<%= review.id %>"
 									data-star-on="<%= asset_path('star-on.png') %>"
 									data-star-off="<%= asset_path('star-off.png') %>"
-									data-score="<%= review.score %>" ><br>
+									data-score="<%= review.score %>" >
 
 										<script>//口コミ一覧の星/////////////////////////////////////////////////////////////////////////////////
 
