--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -3,7 +3,7 @@
     <div class="main-text">あなただけの肌の記録ノート</div>
     <div class="top-buttons">
       <div class="top-button">
-    	 <%= link_to "新規登録", new_user_registration_path, class:"btn btn-info" %>
+    	 <%= link_to "新規会員登録", new_user_registration_path, class:"btn btn-info" %>
       </div>
       <div class="top-button">
     	<%= link_to "ログイン", new_user_session_path, class:"btn btn-info" %>
