--- a/app/assets/stylesheets/user/notes.scss
+++ b/app/assets/stylesheets/user/notes.scss
@@ -2,8 +2,23 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.hello {
+.information {
 	height: 270px;
-	margin-top: 45px;
+	margin-top: 10px;
 	background-color: #FBFBFB;
 }
+
+.hello-user {
+  padding: 40px 0px 0px 40px;
+  font-size: 15px;
+}
+
+.information-contents{
+  padding: 0px 0px 0px 40px;
+  font-size: 15px;
+}
+
+.chart {
+  margin: 0 auto;
+}
+
