--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
-会員情報編集ページです
+  <div class="row">
+    <%= render "layouts/main_button" %>
+  </div>
 
   <%= form_with :model => @user, url:user_user_path, method: :patch, local: true, class:"form-horizontal" do |f| %>
 
     <div class="row">
-      <p>つぶやき内容</p>
+      <p>名前</p>
       <%= f.text_field :name, class: "col-xs-4" %>
     </div>
 
