フッターデザイン修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -129,6 +129,8 @@ header {
 .footer {
 	height: 100px;
 	background-color: #38C5D1;
+  text-align: center;
+  margin-top: 70px;
 }
 //////////////////////////////////////////////////////////////////////////////////////////////////////////
 .btn-success {
@@ -153,3 +155,9 @@ header {
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+.copy {
+  display: inline-block;
+  line-height: 100px;
+  color: white;
+}
