--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,6 @@
     <%= yield %>
   </body>
   <footer class="footer">
-
-        <%= link_to "管理者ログイン", new_admin_session_path %>
-
+    <p class="copy">Copyright © skin note Inc. All Rights Reserved.</p>
   </footer>
 </html>
