--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -17,11 +17,11 @@
 
 <div class="container">
   <div class="contents">
-    skin noteでできること
+<!--     skin noteでできること
 
 
     肌の状態をグラフで確認する
     商品の口コミを書く
-    肌の悩みをつぶやく
+    肌の悩みをつぶやく -->
   </div>
 </div>
