新規会員登録・ログインページレイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,10 @@
 	clear: both;
 }
 
+h4 {
+  margin-top: 40px;
+
+}
 header {
 	width: 100%;
 
@@ -160,4 +164,8 @@ header {
   display: inline-block;
   line-height: 100px;
   color: white;
+}
+
+.field {
+  margin-top: 20px;
 }
