--- a/app/views/user/notes/new.html.erb
+++ b/app/views/user/notes/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<%= render "layouts/main_button" %>
-		<%= flash[:alert] %>
+		<%#= flash[:alert] %>
 	</div>
 
 	<h3>肌ノート作成</h3>
