--- a/app/views/devise/users/registrations/new.html.erb
+++ b/app/views/devise/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Sign up</h2>
+  <h4>新規会員登録</h4>
 
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -28,7 +28,7 @@
     <div class="field">
       <%= f.label :パスワード %>
       <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <em>(<%= @minimum_password_length %> 文字以上)</em>
       <% end %><br />
       <%= f.password_field :password, autocomplete: "new-password" %>
     </div>
@@ -37,11 +37,14 @@
       <%= f.label :パスワードの確認 %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
-
-    <div class="actions">
-      <%= f.submit "Sign up" %>
+    <div class="actions" >
+      <%= f.submit "登録する", class: "btn btn-primary", style: "width:180px" %>
     </div>
   <% end %>
 
-  <%= render "devise/users/shared/links" %>
+  <div>
+    <%= link_to "会員登録がお済の方はこちら", new_user_session_path %>
+    <%#= render "devise/users/shared/links" %>
+  </div>
+
 </div>
