アイテム一覧レイアウト修正

--- a/app/assets/stylesheets/user/items.scss
+++ b/app/assets/stylesheets/user/items.scss
@@ -6,3 +6,34 @@
 	float: left;
 	margin: 20px;
 }
+
+.item-name {
+  font-weight: bold;
+  font-size: 15px;
+  margin-top: 10px;
+}
+
+.item-image {
+  margin-top: 5px;
+}
+
+.item-genre{
+  margin-top: 5px;
+}
+
+.item-maker{
+  margin-top: 5px;
+}
+
+.index-star {
+  margin-top: 5px;
+  float: left;
+}
+
+.average-score {
+  font-weight: bold;
+  font-size: 20px;
+  float: right;
+  padding-right: 10px;
+  margin-top: 5px;
+}
