--- a/app/views/user/items/index.html.erb
+++ b/app/views/user/items/index.html.erb
@@ -1,71 +1,40 @@
 <div class="container" data-turbolinks="false"><!-- ←ターボリンクを無効にしている -->
-	<%= render "layouts/main_button" %>
-
-<!-- 	<h1>カテゴリ一覧</h1> -->
-	<%# @item_genre.each do |g| %>
-		<%#= link_to customer_products_path(:product_genre_id => g.id) do %>
-	<%#= g.name %>
-	<%# end %>
-<!-- 	<%# end %> -->
-	<%#= render 'users/profile', user: @user %>
-
-<!-- 	<div>
-		<%# @toners.each do |toner| %>
-			<div class="item-box">
-				<%#= link_to user_item_path(toner) do %>
-					<%#= attachment_image_tag(toner, :image, :fill, 150, 150, fallback: "no_image.jpg") %><br>
-					<%#= toner.item_name %><br>
-					<%#= toner.item_genre %><br>
-					<%#= toner.maker %><br>
-				<%# end %>
-				<div id="averagestartoner<%#= toner.id %>"
-					data-star-on="<%#= asset_path('star-on.png') %>"
-					data-star-off="<%#= asset_path('star-off.png') %>"
-					data-star-half="<%#= asset_path('star-half.png') %>"
-					data-score="<%#= Review.where(item_id: toner.id).average(:score) %>" ><br> あってる？
-
-					<script>
-					//商品詳細の星/////////////////////////////////////////////////////////////////////////////////
-						var star = document.getElementById(`averagestartoner<%#= toner.id %>`)
-						var starOn = star.dataset.starOn
-						var starOff = star.dataset.starOff
-						var starHalf = star.dataset.starHalf
-
-						$(star).raty({
-							starOn: starOn,
-							starOff: starOff,
-							starHalf: starHalf,
-							half: true,
-							readOnly: true // 編集できない星
-						});
-					</script>
-				</div>
-				<div><%#= Review.where(item_id: toner.id).average(:score) %></div>
-			</div>
-		<%# end %>
+	<div class="row">
+		<%= render "layouts/main_button" %>
 	</div>
- -->
-
-
-
 
 	<div>
 		<h4>アイテム一覧</h4>
 
-
 		<% @items.each do |item| %>
+
 			<div class="item-box">
+
 				<%= link_to user_item_path(item) do %>
-					<%= attachment_image_tag(item, :image, :fill, 150, 150, fallback: "no_image.jpg") %><br>
-					<%= item.item_name %><br>
-					<%= item.item_genre %><br>
-					<%= item.maker %><br>
+
+					<div class="item-image">
+						<%= attachment_image_tag(item, :image, :fill, 185, 185, fallback: "no_image.jpg") %><br>
+					</div>
+
+					<div class="item-name">
+						<%= item.item_name %>
+					</div>
+
+					<div class="item-genre">
+						<%= item.item_genre %>
+					</div>
+
+					<div class="item-maker">
+						<%= item.maker %>
+					</div>
+
 				<% end %>
-				<div id="averagestar<%= item.id %>"
+
+				<div class="index-star" id="averagestar<%= item.id %>"
 					data-star-on="<%= asset_path('star-on.png') %>"
 					data-star-off="<%= asset_path('star-off.png') %>"
 					data-star-half="<%= asset_path('star-half.png') %>"
-					data-score="<%= Review.where(item_id: item.id).average(:score).to_f.round(1) %>" > <!-- あってる？ -->
+					data-score="<%= Review.where(item_id: item.id).average(:score).to_f.round(1) %>" >
 
 					<script>
 					//商品詳細の星/////////////////////////////////////////////////////////////////////////////////
@@ -82,8 +51,13 @@
 							readOnly: true // 編集できない星
 						});
 					</script>
+
 				</div>
-				<div><%= Review.where(item_id: item.id).average(:score).to_f.round(1) %></div>
+
+				<div class="average-score">
+					<%= Review.where(item_id: item.id).average(:score).to_f.round(1) %>
+				</div>
+
 			</div>
 		<% end %>
 	</div>
