--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -2,38 +2,71 @@
 
 	<div class="row">
 		<%= render "layouts/main_button" %>
-		<%= render "layouts/error_messages", model: @review %>
-	</div>
+		<%#= render "layouts/error_messages", model: @review %>
+		  <% if flash[:error].present? %>
+			  <div class="alert alert-danger">
+			    <ul class="errors">
+			      <% flash[:error].each do |e| %>
+			        <li><%= e %></li>
+			      <% end %>
+			    </ul>
+			  </div>
+		  <% end %>
+			</div>
 
 	<div class="row">
 		<div class="col-xs-4">
-			<h4>アイテム詳細ページ</h4>
-			<%= attachment_image_tag(@item, :image, :fill, 150, 150, fallback: "no_image.jpg") %>
-			<%= @item.item_name %>
-			<%= @item.item_genre %>
-			<%= @item.maker %>
-			<div id="averagestar"
-				data-star-on="<%= asset_path('star-on.png') %>"
-				data-star-off="<%= asset_path('star-off.png') %>"
-				data-star-half="<%= asset_path('star-half.png') %>"
-				data-score="<%= @average_score %>.to_f.round(1)" ><br>
-			</div><%= @average_score.to_f.round(1) %>
-			<h4>口コミ投稿</h4>
-			<p>口コミ内容<p>
-			<%= form_with model: @review, url:user_item_reviews_path(@item.id), method: :post, local: true, class:"form-horizontal" do |f| %>
-				<div id="star"
-				data-star-on="<%= asset_path('star-on.png') %>"
-				data-star-off="<%= asset_path('star-off.png') %>" >
-				<!-- ↑ consoleに画像のURLを出力させる(検証ツールから見られる) -->
+			<div class="row">
+
+				<div class="show-item-image">
+					<%= attachment_image_tag(@item, :image, :fill, 150, 150, fallback: "no_image.jpg") %>
 				</div>
-				<%= f.hidden_field :user_id, value: current_user.id %>
-				<div>
-					<%= f.text_area :review_text, class: "col-xs-12" %>
+
+				<div class="show-item-name">
+					<%= @item.item_name %>
 				</div>
-				<div>
-					<%= f.submit "投稿する", class: "col-xs-12 btn btn-primary" %>
+
+				<div class="show-item-genre">
+					<%= @item.item_genre %>
 				</div>
-			<% end %>
+
+				<div class="show-item-maker">
+					<%= @item.maker %>
+				</div>
+
+				<div class="show-star"id="averagestar"
+					data-star-on="<%= asset_path('star-on.png') %>"
+					data-star-off="<%= asset_path('star-off.png') %>"
+					data-star-half="<%= asset_path('star-half.png') %>"
+					data-score="<%= @average_score %>.to_f.round(1)" >
+				</div>
+
+				<div class="show-average-score">
+					<%= @average_score.to_f.round(1) %>
+				</div>
+			</div>
+
+			<div class="row">
+				<h4>口コミ投稿</h4>
+				<%= form_with model: @review, url:user_item_reviews_path(@item.id), method: :post, local: true, class:"form-horizontal" do |f| %>
+					<div id="star"
+					data-star-on="<%= asset_path('star-on.png') %>"
+					data-star-off="<%= asset_path('star-off.png') %>" >
+					<!-- ↑ consoleに画像のURLを出力させる(検証ツールから見られる) -->
+					</div>
+
+					<%= f.hidden_field :user_id, value: current_user.id %>
+
+					<div>
+						<%= f.text_area :review_text, class: "col-xs-12" %>
+					</div>
+
+					<div>
+						<%= f.submit "投稿する", class: "col-xs-12 btn btn-primary" %>
+					</div>
+
+				<% end %>
+			</div>
 		</div>
 
 		<div class="col-xs-8">
