肌ノート新規投稿の日付をカレンダーから選択に変更

--- a/app/views/user/notes/new.html.erb
+++ b/app/views/user/notes/new.html.erb
@@ -9,7 +9,8 @@
 
 		<div>
 			<h4>■日付</h4>
-			<%= f.date_select :date, use_month_numbers: true %>
+			<%#= f.date_select :date, use_month_numbers: true %>
+			<%= f.date_field :date %>
 		</div>
 
 		<div>
