管理者アイテム詳細ページパフォーマンス改善

--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -86,7 +86,7 @@
           <% end %>
         </tbody>
       </table>
-      <%#= paginate @reviews %>
+      <%= paginate @reviews %>
     </div>
   </div>
 </div>
