マイページに選択した月を表示するボタン追加

--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="main-visual">
   <div class="container">
-    <div class="main-text">あなただけの肌の記録ノート</div>
+    <div class="top-headline">あなただけの肌の記録ノート</div>
     <div class="top-buttons">
       <div class="top-button">
     	 <%= link_to "新規会員登録", new_user_registration_path, class:"btn btn-info" %>
@@ -16,12 +16,26 @@
 </div>
 
 <div class="container">
+  <div class="main-text">skin noteでできること</div>
+
   <div class="contents">
-<!--     skin noteでできること
 
+    <div class="content-item">
+      <div class="content-title">肌の状態をグラフで確認する</div>
+      <div class="content-image"></div>
+      <div class="content-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+    </div>
 
-    肌の状態をグラフで確認する
-    商品の口コミを書く
-    肌の悩みをつぶやく -->
+    <div class="content-item">
+      <div class="content-title">商品の口コミを書く</div>
+      <div class="content-image"></div>
+      <div class="content-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+    </div>
+
+    <div class="content-item">
+    　<div class="content-title">肌の悩みをつぶやく</div>
+      <div class="content-image"></div>
+      <div class="content-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+    </div>
   </div>
 </div>
