--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -17,7 +17,7 @@ text-decoration:underline;
 	background-position: bottom;
 }
 
-.main-text {
+.top-headline {
   color: white;
   font-size: 30px;
   margin-top: 70px;
