--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div class="container">
+<!-- <div class="container">
   <div class="main-text">skin noteでできること</div>
 
   <div class="contents">
@@ -23,19 +23,19 @@
     <div class="content-item">
       <div class="content-title">肌の状態をグラフで確認する</div>
       <div class="content-image"></div>
-      <div class="content-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+      <div class="content-text"></div>
     </div>
 
     <div class="content-item">
       <div class="content-title">商品の口コミを書く</div>
       <div class="content-image"></div>
-      <div class="content-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+      <div class="content-text"></div>
     </div>
 
     <div class="content-item">
     　<div class="content-title">肌の悩みをつぶやく</div>
       <div class="content-image"></div>
-      <div class="content-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+      <div class="content-text"></div>
     </div>
   </div>
-</div>
+</div> -->
