--- a/app/views/user/notes/index.html.erb
+++ b/app/views/user/notes/index.html.erb
@@ -30,10 +30,7 @@
   <div class="row">
     <div class="text-right">
       <%= form_with url:user_notes_path, method: :get, local: true, class:"form-horizontal" do |f| %>
-        <!-- <input type="month" name="example"> -->
-        <%#= f.date_select :date, :discard_day => true, use_month_numbers: true %>
-        <%= f.date_select(:date, { use_month_numbers: true, :discard_day => true, date_separator: '/'}) %>
-        <%#= f.date_select :date, start_year: 1930, end_year: (Time.now.year - 18), default: Date.new(1989, 1, 1)) %>
+        <%= f.date_select(:date, { use_month_numbers: true, :discard_day => true, :default => @selected, date_separator: '/'}) %>
         <%= f.submit "選択した月を表示する", class: "btn btn-primary" %>
       <% end %>
     </div>
