ユーザーアイコン画像機能追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.min.js"></script>
     <!-- ↑早く読み込んでほしいので、ここに書いている -->
+    <script src="jquery.fn.gantt.js"></script>
 
   </head>
   <body>
