--- a/app/views/user/items/index.html.erb
+++ b/app/views/user/items/index.html.erb
@@ -37,7 +37,7 @@
 					data-score="<%= Review.where(item_id: item.id).average(:score).to_f.round(1) %>" >
 
 					<script>
-					//商品詳細の星/////////////////////////////////////////////////////////////////////////////////
+					//商品ごとの星/////////////////////////////////////////////////////////////////////////////////
 						var star = document.getElementById(`averagestar<%= item.id %>`)
 						var starOn = star.dataset.starOn
 						var starOff = star.dataset.starOff
