--- a/app/views/user/my_items/index.html.erb
+++ b/app/views/user/my_items/index.html.erb
@@ -40,7 +40,7 @@
 					<tr>
 						<td><%= my_item.item_name %></td>
 						<td><%= my_item.maker %></td>
-						<td><%= link_to "削除する", user_my_item_path(my_item), method: :delete, class: "btn btn-danger btn-sm" %></td>
+						<td><%= link_to "削除", user_my_item_path(my_item), method: :delete, class: "btn btn-danger btn-sm" %></td>
 					</tr>
 				<% end %>
 				</tbody>
